--- a/index.html
+++ b/index.html
@@ -31,7 +31,32 @@
 			<h1>nombre apellido</h1>
 			<h4>Web Developer - Graphic Artist - User Experiencie Designer</h4>
 		</div>
+	</section>
 
+	<section class="contenedor2">
+		<div class="portfolio">
+			<h2>Portfolio</h2>
+		</div>
+		<div class="fotos">
+			<article>
+				<img src="imagenes/cabin.png">
+			</article>
+			<article>
+				<img src="imagenes/cake.png">
+			</article>
+			<article>
+				<img src="imagenes/circus.png">
+			</article>
+			<article>
+				<img src="imagenes/game.png">
+			</article>
+			<article>
+				<img src="imagenes/safe.png">
+			</article>
+			<article>
+				<img src="imagenes/submarine.png">
+			</article>
+		</div>
 	</section>
 
 </body>
