--- a/index.html
+++ b/index.html
@@ -59,5 +59,48 @@
 		</div>
 	</section>
 
+	<section class="contenedor3">
+		<div class="about">
+			<h2>About</h2>
+		</div>
+
+		<article class="parrafo">
+			<p> 
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam.		
+			</p>
+
+			<p> 
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam.		
+			</p>
+		</article>
+
+		<div class="descarga">
+			<article class="down">
+				<a class="boton" href="#">Download Theme</a>
+			</article>
+		</div>
+	</section>
+
+	<section class="contenedor2">
+		<div class="contact">
+			<h2>Contact me</h2>
+		</div>
+
+		<form method="POST" action="enviar.php">
+				<label for="name"> Name </label>
+				<input type="text" id="nombre" required>
+				<br>
+				<label for="correo">Email Address:</label>
+				<input type="email" name="correo" required>
+				<br>
+				<label for="number"> Phone Number </label>
+				<input type="number" id="telefono" required>
+				<br>
+				<label for="mensaje">Mensaje:</label>
+				<textarea name="mensaje"></textarea>
+				<input type="submit" value="Enviar">
+			</form>
+	</section>
+
 </body>
 </html>
